...
        noButton.isEnabled = enable
    }
    // MARK: - Presenter Callbacks

    func showResultsAlert(message: String) {
        let model = AlertModel(
            title: "Квиз завершен!",
            message: message,
            buttonText: "Сыграть ещё раз"
        ) { [weak self] in
            guard let self = self else { return }
            self.presenter.restartGame()
        }
        
        alertPresenter.show(in: self, model: model)
...
